Сделан Header - меню + адаптив

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,7 +4,8 @@
 @import 'settings'
 // Подключение normalize
 @import 'normalize'
+// Подключение header
+@import 'blocks/header'
 
-    
 // Подключение стилей для адаптива
 @import 'media'
