--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -9,6 +9,7 @@
         justify-content: space-between
     &__button
         display: none
+    
 
 .logo
     width: 163px
@@ -37,7 +38,20 @@
             line-height: 20px
             color: $light
             text-decoration: none
-    &__button
+    // &__button
+    //     padding: 9px 65px 8px 63px
+    //     margin-top: -6px
+    //     font-family: Lato, sans-serif
+    //     font-style: normal
+    //     font-weight: 400
+    //     font-size: 14px
+    //     line-height: 20px
+    //     color: $light
+    //     background: #656B70
+    //     border-radius: 10px
+    //     text-transform: uppercase
+.button
+    &_info
         padding: 9px 65px 8px 63px
         margin-top: -6px
         font-family: Lato, sans-serif
@@ -49,5 +63,3 @@
         background: #656B70
         border-radius: 10px
         text-transform: uppercase
-        
-        
