--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,7 @@
 @import 'normalize'
 // Подключение header
 @import 'blocks/header'
-
+// Подключение articles
+@import 'blocks/articles'
 // Подключение стилей для адаптива
 @import 'media'
