--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -8,6 +8,26 @@ body
     overflow-x: hidden
     overflow-y: hidden
 
+@font-face
+    font-family: 'Lato'
+    src: url('../fonts/Lato-Bold.woff') format('woff'),
+    url('../fonts/Lato-Bold.woff2') format('woff2'),
+    url('../fonts/Lato-Bold.eot') format('eot'),
+    url('../fonts/Lato-Bold.ttf') format('ttf')
+    font-weight: 900
+    font-style: normal
+    font-display: swap
+
+@font-face
+    font-family: 'Lato'
+    src: url('../fonts/Lato-Regular.woff') format('woff'),
+    url('../fonts/Lato-Regular.woff2') format('woff2'),
+    url('../fonts/Lato-Regular.eot') format('eot'),
+    url('../fonts/Lato-Regular.ttf') format('ttf')
+    font-weight: 400
+    font-style: normal
+    font-display: swap
+
 .container
     max-width: 1140px
     margin: auto
