Разработал 2 секцию "Важные статьи" + адаптив

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,5 +8,7 @@
 @import 'blocks/header'
 // Подключение articles
 @import 'blocks/articles'
+// Подключение tall
+@import 'blocks/tall'
 // Подключение стилей для адаптива
 @import 'media'
