--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,6 +8,11 @@
     .articles
         &-image
             height: 570px
+    .tall
+        &-info
+            min-width: 320px
+        &-info:nth-child(4)
+            display: none
 @media (max-width: 992px)
     .container
         max-width: 700px
@@ -96,7 +101,11 @@
             &__subtitle
                 padding-left: 10px
                 padding-right: 10px
-            
+    .tall
+        &-info
+            min-width: 350px
+        &-info:nth-child(3)
+            display: none        
 @media (max-width: 767px)
     .container
         max-width: 767px
@@ -111,6 +120,9 @@
         &-choice
             &__info
                 min-width: 100px
+    .tall
+        &-info
+            min-width: 50%
 @media (max-width: 576px)
     .container
         max-width: 480px
@@ -122,6 +134,7 @@
         &-choice
             &__info:nth-child(6)
                 display: none
+
 @media (max-width: 480px)
     .container
         max-width: 280px
@@ -149,3 +162,8 @@
             &__button
                 bottom: 88px
                 left: 25px
+    .tall
+        &-info
+            min-width: 100%
+        &-info:nth-child(2)
+            display: none  
