--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/articles'
 // Подключение tall
 @import 'blocks/tall'
+// Подключение records
+@import 'blocks/records'
 // Подключение стилей для адаптива
 @import 'media'
