Разработал 4 секцию + адаптив

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/tall'
 // Подключение records
 @import 'blocks/records'
+// Подключение paper
+@import 'blocks/paper'
 // Подключение стилей для адаптива
 @import 'media'
