--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -174,6 +174,9 @@
                     margin-left: 0
                     &:nth-child(2)
                         margin-top: 30px
+    .paper
+        &-title
+            font-size: 29px
 @media (max-width: 576px)
     .container
         max-width: 480px
@@ -254,3 +257,7 @@
                     width: 280px
                     flex-direction: column
                     align-items: flex-start
+    .paper
+        &-title
+            font-size: 18px
+            line-height: 30px
