--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -34,6 +34,11 @@
             &__three
                 min-width: 265px
                 margin-top: -68px  
+    .news-paper:not(:last-child)::after
+        width: 645px
+    .news-sidebar__info:after
+        width: 179px
+
 @media (max-width: 992px)
     .container
         max-width: 700px
@@ -146,6 +151,17 @@
             margin-left: 35px
             &__three
                 margin-top: 0
+    .news
+        &-papers
+            width: 407px
+        &-paper
+            flex-direction: column
+            &__info
+                padding-left: 25px
+    .news-paper:not(:last-child)::after
+        width: 357px
+    .news-sidebar__info:after
+        width: 209px
 @media (max-width: 767px)
     .container
         max-width: 767px
@@ -177,6 +193,12 @@
     .paper
         &-title
             font-size: 29px
+    .news
+        &-wrap
+            flex-direction: column
+            align-items: center
+        &-sidebar
+            margin-top: 30px
 @media (max-width: 576px)
     .container
         max-width: 480px
@@ -261,3 +283,14 @@
         &-title
             font-size: 18px
             line-height: 30px
+    .news
+        &-sidebar
+            margin-left: 0
+        &-papers
+            width: 280px
+        &-paper
+            &__image
+                min-width: 230px
+                height: 167px
+    .news-paper:not(:last-child)::after 
+        width: 230px
