--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'blocks/records'
 // Подключение paper
 @import 'blocks/paper'
+// Подключение news
+@import 'blocks/news'
 // Подключение стилей для адаптива
 @import 'media'
