Разработал 6 секцию "Статьи" + слайдер и адаптив

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'blocks/paper'
 // Подключение news
 @import 'blocks/news'
+// Подключение newspaper
+@import 'blocks/newspaper'
 // Подключение стилей для адаптива
 @import 'media'
