--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -38,7 +38,17 @@
         width: 645px
     .news-sidebar__info:after
         width: 179px
-
+    .newspaper
+        &-wrap
+            flex-direction: column
+            align-items: center
+        &__right
+            &-top
+                margin-left: 0px
+                margin-top: 30px
+            &-bottom
+                &-item:not(:last-child)
+                    margin-left: 0px
 @media (max-width: 992px)
     .container
         max-width: 700px
@@ -199,6 +209,14 @@
             align-items: center
         &-sidebar
             margin-top: 30px
+    .newspaper
+        &__slider
+            width: 528px
+        &__right
+            &-top
+                width: 528px
+                &-image
+                    width: 528px
 @media (max-width: 576px)
     .container
         max-width: 480px
@@ -227,6 +245,27 @@
             margin-left: 0
         &-sidebar__one, &-sidebar__two
             margin-right: 0
+    .newspaper
+        &__slider
+            width: 438px
+        &__slide
+            &-title
+                font-size: 34px
+                line-height: 42px
+        &__right
+            &-button
+                bottom: 20px
+            &-bottom
+                &-item
+                    display: flex
+                    flex-direction: column
+                    justify-content: space-between
+            &-top
+                width: 438px
+                height: 310px
+                &-image
+                    width: 438px
+                    height: 310px
 @media (max-width: 480px)
     .container
         max-width: 280px
@@ -294,3 +333,32 @@
                 height: 167px
     .news-paper:not(:last-child)::after 
         width: 230px
+    .newspaper
+        &__slider
+            width: 280px
+            height: 503px
+        &__slide
+            &-title
+                font-size: 23px
+                line-height: 36px
+        &__right
+            &-bottom
+                display: flex
+                flex-direction: column
+                &-item
+                    width: 100%
+                    margin-left: 0
+                    &:not(:last-child)
+                        margin-left: 0px
+                    &:not(:first-child)
+                        margin-top: 30px
+            &-top
+                width: 100%
+                height: 310px
+                background-color: #B4D1E0 
+                border-radius: 10px
+                &-image
+                    width: 280px
+                    height: 310px
+                    display: none
+                
