Разработал секцию подписки + адаптив

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -217,6 +217,13 @@
                 width: 528px
                 &-image
                     width: 528px
+    .subscribe
+        &__title
+            text-align: center
+            font-size: 36px
+            line-height: 35px
+        &__input
+            width: 230px
 @media (max-width: 576px)
     .container
         max-width: 480px
@@ -361,4 +368,10 @@
                     width: 280px
                     height: 310px
                     display: none
-                
+    .subscribe
+        &__subscription
+            display: flex
+            flex-direction: column
+            align-items: center
+        &__button
+            margin-top: 25px
