--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'blocks/news'
 // Подключение newspaper
 @import 'blocks/newspaper'
+// Подключение subscribe
+@import 'blocks/subscribe'
 // Подключение стилей для адаптива
 @import 'media'
