--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,5 +20,7 @@
 @import 'blocks/newspaper'
 // Подключение subscribe
 @import 'blocks/subscribe'
+// Подключение footer
+@import 'blocks/footer'
 // Подключение стилей для адаптива
 @import 'media'
