Правка меню - скролл на адаптиве, подсветка активного пункта

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -38,6 +38,8 @@
             line-height: 20px
             color: $light
             text-decoration: none
+            &-active
+                color: #4592FF
     // &__button
     //     padding: 9px 65px 8px 63px
     //     margin-top: -6px
