Реализовал отправку данных на почту и всплывающее окно; отправлен запрос на ssl; разместил на домене для проверки

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -84,6 +84,7 @@
                     align-items: center
                     margin-top: 15px
                     margin-bottom: 15px
+                    height: 100%
             &__button
                 &_mobile
                     &-visible
