--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -38,3 +38,9 @@ ul
 .button
     outline: none
     border: none
+.lock
+    overflow: hidden
+    position: fixed
+    width: 100%
+    max-height: 100vh
+    overflow-y: scroll
