--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,11 +1,11 @@
 .navbar
-    padding-top: 15px;
-    padding-bottom: 15px;
+    
     background-color: #262D33
     &-wrap
         display: flex
         align-items: center
-
+        padding-top: 15px
+        padding-bottom: 15px
         justify-content: space-between
     &__button
         display: none
@@ -65,3 +65,4 @@
         background: #656B70
         border-radius: 10px
         text-transform: uppercase
+        cursor: pointer
