--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,5 +22,7 @@
 @import 'blocks/subscribe'
 // Подключение footer
 @import 'blocks/footer'
+// Подключение modal
+@import 'blocks/modal'
 // Подключение стилей для адаптива
 @import 'media'
