Правка страницы благодарности

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -188,6 +188,8 @@
             flex-wrap: wrap
         &__navigation
             width: 33%     
+    .thanks
+        margin-top: 60px
 @media (max-width: 767px)
     .container
         max-width: 767px
