--- a/sass/style.sass
+++ b/sass/style.sass
@@ -24,5 +24,7 @@
 @import 'blocks/footer'
 // Подключение modal
 @import 'blocks/modal'
+// Подключение thanks
+@import 'blocks/thanks'
 // Подключение стилей для адаптива
 @import 'media'
