--- a/sass/blocks/_articles.sass
+++ b/sass/blocks/_articles.sass
@@ -1,7 +1,33 @@
 .articles
+    position: relative
+    
+    &::after
+        content: ''
+        width: 100%
+        height: 473px
+        display: block
+        position: absolute
+        top: -24px
+        left: 0
+        z-index: -3
+        background-color: #262D33
+    &::before
+        content: ''
+        width: 100%
+        height: 151px
+        display: block
+        position: absolute
+        bottom: -26px
+        left: 0
+        z-index: -2
+        background-color: #EDEFF0
     &-choice
         max-width: 263px
         cursor: pointer
+        background-color: #fff
+        border-radius: 0px 10px 10px 0px
+        &__info
+            background-color: #fff
         &__info:nth-child(2)
             .articles-choice__subtitle
                 color: #3BBDC4
@@ -32,7 +58,7 @@
             padding: 20px
             padding-left: 25px
             padding-right: 10px
-            background-color: #f1f1f1
+            // background-color: #f1f1f1
         &__subtitle
             padding: 18px 25px 8px 25px
             border-top: 1px solid #F5F5F5
@@ -58,7 +84,7 @@
     &-wrap
         display: flex
         justify-content: flex-start
-        align-items: flex-start
+        align-items: stretch
         margin-top: 24px
         min-width: 570px
         &__button
@@ -118,10 +144,12 @@
             display: block
             position: absolute
             top: 0
+            border-radius: 10px 0px 0px 10px;
         &__img
             height: 100%
             width: 100%
             object-fit: cover
+            border-radius: 10px 0px 0px 10px;
             // background-color: #40303D
             
             // opacity: 0.15
