Оптимизация картинок для лучшей загрузки сайта

--- a/sass/blocks/_paper.sass
+++ b/sass/blocks/_paper.sass
@@ -62,7 +62,7 @@
         margin-top: 25px
         margin-bottom: 55px
         // text-align: center
-        &_icon
+        &__icon
             fill: $light
             width: 20px
             height: 20px
