--- a/sass/blocks/_records.sass
+++ b/sass/blocks/_records.sass
@@ -125,6 +125,7 @@
             justify-content: space-between
             background-color: #fff
             border-radius: 10px
+            text-decoration: none
             &-top
                 display: flex
                 border-bottom: 1px solid #D9DADB
